test/parser/type_declaration/empty_tuple_variant.exp
Error: Tuple must have at least one element
test/parser/type_declaration/empty_tuple_variant.myte:4:4-10
 4 |   | Bar ()
   |     ^^^^^^