test/parser/type_declaration/empty_tuple_variant.myte
module test

type Foo =
  | Bar ()
  | Baz { key: Int }
